Tags working with a new tags.html page and tag-list.html include

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,11 +25,11 @@
 		</section>
 		<aside class="sidebar col-1-3">
 			<section class="module">
-				<p>List of posts.</p>
+				{% include tag-list.html %}
 			</section>
 		</aside>
 	</div> <!-- grid -->
-	<footer class="about">
+	<footer class="about grid">
 		<ul class="post-meta">
 			<li class="icon-twitter">dvhthomas</li>
 			<li class="icon-linkedin"><a href="http://www.linkedin.com/pub/dylan-thomas/1/94a/497" title="LinkedIn profile">Linked In</a></li>
