--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 	</div> <!-- grid -->
 	<footer class="about grid">
 		<ul class="post-meta">
-			<li class="icon-twitter">dvhthomas</li>
+			<li class="icon-twitter"><a href="https://twitter.com/dvhthomas" title="Twitter profile for Dylan Thomas">dvhthomas</a></li>
 			<li class="icon-linkedin"><a href="http://www.linkedin.com/pub/dylan-thomas/1/94a/497" title="LinkedIn profile">Linked In</a></li>
 		</ul>
 	</footer>
