--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>{{ page.title }}</title>
-<link href='http://fonts.googleapis.com/css?family=Glegoo|Open+Sans:300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Headland+One|Open+Sans:300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/css/normalize.css" />
 	<link rel="stylesheet" href="/css/pygments.css"/>
 	<link rel="stylesheet" href="/css/font-awesome.css"/>
@@ -14,16 +14,14 @@
 </head>
 <body>
 	<header class="banner">
-		<h1><a href="/" title="home">Dylan Does Digits</a></h1>
-		<p>Adventures in technology, or just a place to save ideas so I don&rsquo;t have to learn them again.</p>
-		<nav>
-		</nav>
+		<h1><a href="/" title="home">Digits By Me</a></h1>
+		<p>Dylan Does Digits, or just a place to save ideas so I don&rsquo;t have to learn them again.</p>
 	</header>
 	<div class="grid">
-		<section class="main-content col-2-3">
+		<section class="main-content col-3-4">
 	{{ content }}
 		</section>
-		<aside class="sidebar col-1-3">
+		<aside class="sidebar col-1-4">
 			<section class="module">
 				{% include tag-list.html %}
 			</section>
