--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,10 @@
 	<link rel="stylesheet" href="/css/pygments.css"/>
 	<link rel="stylesheet" href="/css/font-awesome.css"/>
 	<link rel="stylesheet" href="/css/screen.css"/>
-	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+	<!--<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 	<script type="text/javascript">
 		google.load("jquery", 1);
-	</script>
+	</script>-->
 </head>
 <body>
 	<header class="banner">
@@ -18,10 +18,10 @@
 		<p>Dylan Does Digits, or just a place to save ideas so I don&rsquo;t have to learn them again.</p>
 	</header>
 	<div class="grid">
-		<section class="main-content col-3-4">
+		<section class="main-content col-2-3">
 	{{ content }}
 		</section>
-		<aside class="sidebar col-1-4">
+		<aside class="sidebar col-1-3">
 			<section class="module">
 				{% include tag-list.html %}
 			</section>
