--- a/css/screen.css
+++ b/css/screen.css
@@ -32,6 +32,7 @@ code {
   padding-bottom: 0;
 }
 .post-abstract {
+  color: rgb(40, 40, 40);
   font-size: 1.2em;
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   font-weight: 300;
@@ -140,7 +141,8 @@ li:last-child .hentry, #content > .hentry {
   text-decoration: none;
 }
 .hentry .post-info * {
-  font-style: normal;}
+  font-style: normal;
+}
 
 /* Content */
 .hentry footer {
@@ -158,11 +160,59 @@ li:last-child .hentry, #content > .hentry {
   margin: 0;
 }
 .posts-list .hentry {
-  padding-left: 200px;
+  padding-left: 140px;
   position: relative;
 }
-.posts-list footer { left: 10px; position: absolute; top: 1.5em; width: 190px; }
+.posts-list footer {
+  left: 10px;
+  top: 10px;
+  position: absolute;
+  width: 120px;
+}
+.date {
+  width: 80px;
+  height: 70px;
+  background: #fcfcfc; 
+  background: linear-gradient(top, #fcfcfc 0%,#dad8d8 100%); 
+  background: -moz-linear-gradient(top, #fcfcfc 0%, #dad8d8 100%); 
+  background: -webkit-linear-gradient(top, #fcfcfc 0%,#dad8d8 100%);
+  border: 1px solid #d2d2d2;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  -moz-box-shadow: 0 0 15px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0 0 15px rgba(0,0,0,0.1);
+  box-shadow: 0 0 15px rgba(0,0,0,0.1);
+}
+.date p {
+  position: relative;
+  top: -15px;
+  font-family: Helvetica, sans-serif;
+  font-size: 1.3em;
+  text-align: center;
+  color: #9e9e9e;
+}
 
+.date p span {
+  background: #36761d; /* Old browsers */
+  background: -moz-linear-gradient(top,  #36761d 0%, #57b22c 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#36761d), color-stop(100%,#57b22c)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #36761d 0%,#57b22c 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #36761d 0%,#57b22c 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #36761d 0%,#57b22c 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #36761d 0%,#57b22c 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#36761d', endColorstr='#57b22c',GradientType=0 ); /* IE6-9 */
+  font-size: 1em;
+  font-weight: bold;
+  color: #fff;
+  text-transform: uppercase;   
+  display: block;
+  border-top: 3px solid rgb(54, 118, 29);
+  -moz-border-radius: 0 0 10px 10px;
+  -webkit-border-radius: 0 0 10px 10px;
+  border-radius: 0 0 10px 10px;
+  padding: 4px 0 4px 0;
+}
 /* index page with post list */
 .posts-list li {
   list-style: none;
