--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,13 +31,16 @@
 		<aside class="sidebar col-1-3">
 			<section class="module">
 				{% include tag-list.html %}
-			<h1><i class="icon-link"></i>Connect</h1>
-			<ul class="connect">
-			<li class="icon-rss"><a href="/atom.xml" title="Atom feed">Subscribe</a></li>
-			<li class="icon-github"><a href="http://github.com/dvhthomas" title="github">My projects on Github</a></li>
-			<li class="icon-twitter"><a href="https://twitter.com/dvhthomas" title="Twitter profile for Dylan Thomas">dvhthomas</a></li>
-			<li class="icon-linkedin"><a href="http://www.linkedin.com/pub/dylan-thomas/1/94a/497" title="LinkedIn profile">Linked In</a></li>
-		</ul>
+				<h1><i class="icon-link"></i>Connect</h1>
+				<ul class="connect">
+					<li class="icon-rss"><a href="/atom.xml" title="Atom feed">Subscribe</a></li>
+					<li class="icon-github"><a href="http://github.com/dvhthomas" title="github">My projects on Github</a></li>
+					<li class="icon-twitter"><a href="https://twitter.com/dvhthomas" title="Twitter profile for Dylan Thomas">dvhthomas</a></li>
+					<li class="icon-linkedin"><a href="http://www.linkedin.com/pub/dylan-thomas/1/94a/497" title="LinkedIn profile">Linked In</a></li>
+				</ul>
+				<h1><i class="icon-heart-empty"></i>Smile</h1>
+				<img src="http://s.gravatar.com/avatar/f63124aaa955f1fed366c9c7afa791c3?s=120" alt="Puppy" />
+				<p>There&rsquo;s just something about this puppy that make me want to forget technical problems.</p>
 			</section>
 		</aside>
 	</div> <!-- grid -->
