bunch of new posts, making the code font a little less spaced out. couple of links to old blogs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,12 +16,14 @@
 <body>
 	<header class="banner">
 		<h1><a href="/" title="home">Digits By Me</a></h1>
-		<p><em>Dylan Does Digits, or just a place to save ideas so I don&rsquo;t have to learn them again.</em></p>
+		<p><em>Digits get done by Dylan...or just a place to save ideas so I don&rsquo;t have to discover them again.</em></p>
 	</header>
 		<nav class="main-nav">
 			<ul>
 				<li><a href="/" title="home">home</a></li>
 				<li><a href="/about.html" title="about">about</a></li>
+				<li><a href="http://dylandoesdigits.posterous.com" title="posterous">off-site</a></li>
+				<li><a href="http://dylandoesdigits.blogspot.com" title="blogger">even more off-site</a></li>
 			</ul>
 		</nav>
 	<div class="grid">
