--- a/css/screen.css
+++ b/css/screen.css
@@ -20,6 +20,7 @@ pre, code {
 pre {
   background-color: rgb(245, 245, 245);
   border-left: 2px solid #ccc;
+  line-height: 120%;
   padding: 1em 0 1em .5em;
 }
 code {
@@ -30,7 +31,7 @@ code {
 blockquote {
   font-size: 1.2em;
   font-style: italic;
-  width: 500px;
+  max-width: 700px;
   margin: 0.25em 0.5em;
   padding: 0.25em 40px;
   line-height: 1.45;
