--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,18 @@
 	<link rel="stylesheet" href="/css/font-awesome.css"/>
 	<link rel="stylesheet" href="/css/screen.css"/>
 	<link rel="alternate" type="application/atom+xml" title="Latest posts" href="/atom.xml" /> 
+	<script type="text/javascript">
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-34778871-1']);
+		_gaq.push(['_setDomainName', 'digitsby.me']);
+		_gaq.push(['_trackPageview']);
+
+		(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+	</script>
 	<!--<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 	<script type="text/javascript">
 		google.load("jquery", 1);
