some more old posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
 			<ul>
 				<li><a href="/" title="home">home</a></li>
 				<li><a href="/about.html" title="about">about</a></li>
-				<li><a href="http://dylandoesdigits.posterous.com" title="posterous">off-site</a></li>
-				<li><a href="http://dylandoesdigits.blogspot.com" title="blogger">even more off-site</a></li>
+				<li><a href="http://dylandoesdigits.posterous.com" title="posterous" target="_none">off-site</a></li>
+				<li><a href="http://dylandoesdigits.blogspot.com" title="blogger" target="_none">even more off-site</a></li>
 			</ul>
 		</nav>
 	<div class="grid">
