--- a/css/screen.css
+++ b/css/screen.css
@@ -24,7 +24,9 @@ pre, code {
 pre {
   background-color: rgb(245, 245, 245);
   border-left: 2px solid #ccc;
-  line-height: 120%;
+  font-size: 1em;
+  font-weight: 400;
+  line-height: 130%;
   padding: 1em 0 1em .5em;
 }
 code {
