--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,22 +2,22 @@
 layout: default
 ---
 <article class="module post" itemscope="" itemtype="http://schema.org/BlogPosting">
-	<header>
-		<h1 class="post-title" itemprop="name"><i class="icon-bookmark"></i>{{ page.title }}</h1>
-		<p class="post-abstract" itemprop="headline">{{ page.abstract }}</p>
-	</header>
-	<div itemprop="articleBody">
+  <header>
+  <h1 class="post-title" itemprop="name"><i class="icon-bookmark"></i>{{ page.title }}</h1>
+  <p class="post-abstract" itemprop="headline">{{ page.abstract }}</p>
+  </header>
+  <div itemprop="articleBody">
 {{ content }}
-	</div>
-<footer>
-		<ul class="post-meta">
-			<li class="icon-calendar">
-				<span datetime="{{post.date | date_to_xmlschema}}" itemprop="datePublished">{{ page.date | date_to_long_string }}</span>
-			</li>
-			<li class="icon-paper-clip"><a href="{{ page.url }}" title="permalink">permalink</a></li>
-			<li class="icon-tags">{{ page.tags | array_to_sentence_string }}</li>
-		</ul>
-</footer>
+  </div>
+  <footer>
+      <ul class="post-meta">
+        <li class="icon-calendar">
+          <span datetime="{{page.date | date_to_xmlschema}}" itemprop="datePublished">{{ page.date | date_to_long_string }}</span>
+        </li>
+        <li class="icon-paper-clip"><a href="{{ page.url }}" title="permalink">permalink</a></li>
+        <li class="icon-tags">{{ page.tags | array_to_sentence_string }}</li>
+  </ul>
+  </footer>
 </article>
 <div id="disqus_thread"></div>
 <script type="text/javascript">
